--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chartjs": "^0.3.24",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
