--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ag-charts-react": "^9.2.1",
-    "apexcharts": "^3.48.0",
-    "chartjs": "^0.3.24",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-chartjs-2": "^5.2.0",
     "react-curved-text": "^3.0.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
