--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.91.7",
+    "@solflare-wallet/sdk": "^1.4.2",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
