--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.7",
     "@solflare-wallet/sdk": "^1.4.2",
+    "bs58": "^5.0.0",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
