--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@ledgerhq/errors": "^6.16.4",
+    "@rollup/plugin-inject": "^5.0.5",
     "@solana/spl-token": "^0.4.6",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
@@ -20,6 +21,10 @@
     "@solana/web3.js": "^1.91.7",
     "@solflare-wallet/sdk": "^1.4.2",
     "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
+    "buffer-browserify": "^0.2.5",
+    "crypto-browserify": "^3.12.0",
+    "esbuild-plugin-polyfill-node": "^0.3.0",
     "react": "^18.2.0",
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.2.0",
@@ -29,6 +34,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "tweetnacl": "^1.0.3",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-node-stdlib-browser": "^0.2.1"
   },
   "devDependencies": {
